terraform_code/infra_creation.tf
provider "aws" {
  region = "us-east-1"
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"]
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }
}

resource "aws_instance" "demo-server" {
  for_each      = toset(["jenkins-master", "build-slave", "ansible"])
  ami           = data.aws_ami.ubuntu.image_id
  instance_type = "t2.micro"
  key_name      = "dpp"
  //security_groups = [ "demo-sg" ]
  vpc_security_group_ids = [aws_security_group.demo-sg.id]
  subnet_id              = aws_subnet.dpp-public-subnet-01.id

  # Attach IAM role depending on the instance
  iam_instance_profile = (
    each.key == "jenkins-master" ? aws_iam_instance_profile.jenkins_profile.name :
    each.key == "build-slave" ? aws_iam_instance_profile.jenkins_profile.name :
    each.key == "ansible" ? aws_iam_instance_profile.ansible_profile.name :
    null
  )


  # cloud-init user data (only for ansible node)
  user_data = each.key == "ansible" ? file("${path.module}/ansible.sh") : null

  tags = {
    Name    = "${each.key}"
    Project = "dpp"
  }
}

resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "SSH Access"
  vpc_id      = aws_vpc.dpp-vpc.id

  ingress {
    description = "SHH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins port"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Container port"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-prot"

  }
}

resource "aws_vpc" "dpp-vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "dpp-vpc"
  }

}

resource "aws_subnet" "dpp-public-subnet-01" {
  vpc_id                  = aws_vpc.dpp-vpc.id
  cidr_block              = "10.1.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1a"
  tags = {
    Name = "dpp-public-subnet-01"
  }
}

resource "aws_subnet" "dpp-public-subnet-02" {
  vpc_id                  = aws_vpc.dpp-vpc.id
  cidr_block              = "10.1.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1b"
  tags = {
    Name = "dpp-public-subnet-02"
  }
}

resource "aws_internet_gateway" "dpp-igw" {
  vpc_id = aws_vpc.dpp-vpc.id
  tags = {
    Name = "dpp-igw"
  }
}

resource "aws_route_table" "dpp-public-rt" {
  vpc_id = aws_vpc.dpp-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.dpp-igw.id
  }
}

resource "aws_route_table_association" "dpp-rta-public-subnet-01" {
  subnet_id      = aws_subnet.dpp-public-subnet-01.id
  route_table_id = aws_route_table.dpp-public-rt.id
}

resource "aws_route_table_association" "dpp-rta-public-subnet-02" {
  subnet_id      = aws_subnet.dpp-public-subnet-02.id
  route_table_id = aws_route_table.dpp-public-rt.id
}

# -------------------------
# ECR Repository for Docker Images
# -------------------------
resource "aws_ecr_repository" "ttrend" {
  name = "ttrend"
  image_scanning_configuration {
    scan_on_push = true
  }
  tags = {
    Name = "ttrend-ecr"
  }
}
/*
# -------------------------
# CodeArtifact Domain + Repository for Maven JARs
# -------------------------
resource "aws_codeartifact_domain" "my_domain" {
  domain = "my-domain"
}

data "aws_caller_identity" "current" {}

resource "aws_codeartifact_repository" "maven_repo" {
  repository = "my-maven-repo"
  domain     = aws_codeartifact_domain.my_domain.domain
  domain_owner = data.aws_caller_identity.current.account_id

  # Optional: pull dependencies from Maven Central
  external_connections {
    external_connection_name = "public:maven-central"
  }

  tags = {
    Name = "my-maven-repo"
  }
}*/

//This role lets the Jenkins server push/pull Docker images from ECR and manage Maven artifacts in CodeArtifact without hardcoding AWS credentials

resource "aws_iam_role" "jenkins_role" {
  name = "jenkins-role"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ecr_access" {
  role       = aws_iam_role.jenkins_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess"
}

/*resource "aws_iam_role_policy_attachment" "codeartifact_access" {
  role       = aws_iam_role.jenkins_role.name
  policy_arn = "arn:aws:iam::aws:policy/AWSCodeArtifactAdminAccess"
}*/

resource "aws_iam_instance_profile" "jenkins_profile" {
  name = "jenkins-instance-profile"
  role = aws_iam_role.jenkins_role.name
}

# Attach to EC2 in Line- 21

# Custom IAM role for Ansible EC2 to manage dynamic inventory file
resource "aws_iam_role" "ansible_role" {
  name = "ansible-ec2-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
        Action = "sts:AssumeRole"
      }
    ]
  })
}

# IAM Policy for Ansible EC2 (Describe permissions only)
resource "aws_iam_policy" "ansible_policy" {
  name        = "ansible-ec2-policy"
  description = "Allow Ansible EC2 to describe instances and tags"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "ec2:DescribeInstances",
          "ec2:DescribeTags"
        ]
        Resource = "*"
      }
    ]
  })
}

# Attach the Policy to the Role
resource "aws_iam_role_policy_attachment" "ansible_attach" {
  role       = aws_iam_role.ansible_role.name
  policy_arn = aws_iam_policy.ansible_policy.arn
}

# IAM Instance Profile (EC2 requires this wrapper to use the role)
resource "aws_iam_instance_profile" "ansible_profile" {
  name = "ansible-ec2-instance-profile"
  role = aws_iam_role.ansible_role.name
}


// output block

output "ecr_repository_url" {
  value = aws_ecr_repository.ttrend.repository_url
}
/*
output "codeartifact_repository_endpoint" {
  value = aws_codeartifact_repository.maven_repo.repository
}

output "codeartifact_domain" {
  value = aws_codeartifact_domain.my_domain.domain
}*/
